<resources>
    <string name="app_name">Transport</string>
    <string name="title_activity_splesh">SpleshActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="string_name">Transport</string>


    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="title_activity_user_details">UserDetails</string>

    <string name="menu_home">Home</string>
    <string name="menu_transportSystem">Transport System</string>

    <string name="menu_account">Account</string>
    <string name="menu_passwoword_change">Password Update</string>
    <string name="menu_location">Location</string>
    <string name="menu_userDetail">User Detail</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Button">Email</string>
    <string name="name">Name</string>
    <string name="Register_Text">TRANSPORT SYSTEM</string>
    <string name="Button_Text">Signup</string>
    <string name="textSize">Signup</string>
    <string name="edittext_school">School</string>
    <string name="Button_submit">Update</string>
    <string name="current_password">CurrentPassword</string>
    <string name="new_password">NewPassword</string>

</resources>