<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relative"
    android:background="@color/white"
    tools:context=".RegisterActivity">



    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="157dp"
        android:padding="10dp"
        android:text="@string/Register_Text"
        android:importantForAutofill="no"

        android:textColor="@color/purple_500"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="221dp"
        android:orientation="vertical"
        android:background="@color/purple_200"
        android:padding="30dp">


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"

            android:layout_marginBottom="8dp"
            android:background="@drawable/round"
            android:drawablePadding="5dp"
            android:hint="@string/email"
            android:importantForAutofill="no"

            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="10dp"
            android:paddingLeft="5dp"

            android:singleLine="true"

            android:textColor="@color/purple_700" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/round"
            android:drawablePadding="5dp"
            android:fontFamily="sans-serif"
            android:hint="@string/password"
            android:importantForAutofill="no"

            android:inputType="textPassword"
            android:minHeight="48dp"

            android:padding="10dp"
            android:paddingLeft="5dp"
            android:textColor="@color/purple_700" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:padding="10dp"
            android:background="@color/purple_500"
            android:text="SIGN IN"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize" />



        <com.google.android.gms.common.SignInButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sign_in_button"
            android:layout_marginTop="8dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="8dp">

        </com.google.android.gms.common.SignInButton>








    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/textViewRegister1"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/purple_500"
            android:text="Sign UP"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize" />


        <Button
            android:id="@+id/textViewRegister2"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/purple_500"
            android:text=" FORGET USER"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize" />
    </LinearLayout>



</RelativeLayout>